<resources>
    <string name="app_name">Sentinela</string>
    <string name="default_notification_channel_id">101</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_image">User image</string>
    <string name="your_messages_will_appear_here">Your Messages will appear here</string>
    <string name="deleted_message">This message was deleted</string>
    <string name="deleted_message_title">Message deleted</string>
    <string name="deleted_message_body">Someone deleted a message in %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="intro_text_one">WhatsDeleted will allow you to recover deleted WhatsApp messages by reading your notifications</string>
    <string name="notice">Notice</string>
    <string name="intro_text_two">If you have silenced a chat or watching it when the message gets deleted, you will not receive a notification so WhatsDeleted can\'t help in this case. \n \n WhatsDeleted can\'t recover messages that have been deleted before you installed this app.</string>
    <string name="setup">Setup</string>
    <string name="notification_notice">This allow the app to backup your notifications and messages in case they are deleted</string>
    <string name="notification_reader">Notification reader</string>
    <string name="enable">Enable</string>
    <string name="allowlist_title">Monitoramento por contato</string>
    <string name="allowlist_sub">Mensagens: desligue para ignorar o contato (nada é salvo). Mídia: desligue para não guardar fotos, vídeos e áudios nem alertar quando ele apagar mensagem. Para excluir uma conversa já salva, toque e segure nela na tela inicial.</string>
    <string name="switch_messages">Mensagens</string>
    <string name="switch_media">Mídia</string>
    <string name="delete_chat_title">Excluir conversa com %1$s?</string>
    <string name="delete_chat_body">Apaga as mensagens e mídias salvas desta conversa, exceto as favoritas. Se o contato mandar mensagem de novo, ela volta a aparecer, a menos que você escolha ignorar.</string>
    <string name="delete_chat">Excluir</string>
    <string name="delete_chat_and_ignore">Excluir e ignorar</string>
    <string name="open_video">▶ Abrir vídeo</string>
    <string name="play_audio">▶ Ouvir áudio</string>
    <string name="media_no_viewer">Nenhum app para abrir esta mídia</string>
    <string name="allowlist_empty">Nenhuma conversa capturada ainda</string>
    <string name="media_perm_title">Backup de mídia</string>
    <string name="media_perm_notice">Opcional: permite copiar fotos, vídeos, áudios, figurinhas e GIFs recebidos para recuperar os apagados</string>
    <string name="media_perm_allow">Permitir mídia</string>
    <string name="media_perm_files_notice">Falta o acesso a todos os arquivos: sem ele figurinhas, GIFs e áudios de voz não são salvos</string>
    <string name="media_perm_files_allow">Permitir arquivos</string>
    <string name="media_perm_granted">Permissão de mídia concedida</string>
    <string name="attached_media">Mídia recuperada</string>
    <string name="message_copied">Mensagem copiada</string>
    <string name="copy_message">Copiar</string>
    <string name="favorite_add">Favoritar</string>
    <string name="favorite_remove">Remover dos favoritos</string>
    <string name="favorite_tag">★ Favorita</string>
    <string name="ignored_title">Contatos ignorados</string>
    <string name="ignored_sub">Contatos que você mandou ignorar. Ligue \"Mensagens\" para voltar a salvar o que eles mandarem.</string>
    <string name="ignored_empty">Nenhum contato ignorado</string>
    <string name="contact_ignored">%1$s ignorado. Para voltar a salvar, use o menu > Contatos ignorados.</string>
    <string name="stop_ignoring">Desfazer</string>
</resources>