<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation.xml"
    app:startDestination="@id/chatListFragment">

    <fragment
        android:id="@+id/chatDetailFragment"
        android:name="com.tiriig.whatsdeleted.ui.chat.detail.ChatDetailFragment"
        android:label="Chat Detail"
        tools:layout="@layout/fragment_chat_detail" />
    <fragment
        android:id="@+id/chatListFragment"
        android:name="com.tiriig.whatsdeleted.ui.chat.list.ChatListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_chat_list" />
    <fragment
        android:id="@+id/allowedContactsFragment"
        android:name="com.tiriig.whatsdeleted.ui.allowlist.AllowedContactsFragment"
        android:label="@string/allowlist_title"
        tools:layout="@layout/fragment_allowed_contacts" />
    <!-- Same screen filtered to ignored contacts, so one can be switched back on. -->
    <fragment
        android:id="@+id/ignoredContactsFragment"
        android:name="com.tiriig.whatsdeleted.ui.allowlist.AllowedContactsFragment"
        android:label="@string/ignored_title"
        tools:layout="@layout/fragment_allowed_contacts">
        <argument
            android:name="ignoredOnly"
            android:defaultValue="true"
            app:argType="boolean" />
    </fragment>
</navigation>
