<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginEnd="15dp"
    android:layout_marginStart="15dp"
    android:background="@drawable/message_background"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/deletedTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_delete_24"
            app:tint="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/deleted_message"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textColorLink="@color/link_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deletedTag"
        tools:text="How are you doing" />

    <ImageView
        android:id="@+id/mediaThumb"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/attached_media"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/mediaOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="?attr/selectableItemBackground"
        android:minHeight="40dp"
        android:gravity="center_vertical"
        android:textColor="@color/link_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mediaThumb"
        tools:text="@string/play_audio"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/favoriteTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/favorite_tag"
        android:textColor="@color/favorite"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/date"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mediaOpen"
        tools:text="02-02-2022" />

</androidx.constraintlayout.widget.ConstraintLayout>